# MarlinKinfit

./: AUTHORS  CMakeLists.txt  README  README.md  TopTester.xml  WW5CFit.xml  release-notes.txt
.github/workflows/: coverity.yml  key4hep.yml
cmake/: MarlinKinfitConfig.cmake.in  createMarlinKinfitConfig.cmake
doc/: ReleaseNotes.md  release.notes
include/: BaseDefs.h  BaseFitObject.h  BaseHardConstraint.h  BaseJetPairing.h  BaseSoftConstraint.h  BaseTracer.h  ChargedParticleTrack.h  DijetEventILC.h  FourJetPairing.h  FourJetZHPairing.h  FourVector.h  ISRPhotonFitObject.h  IterationScanner.h  JBLHelix.h  JetFitObject.h  LeptonFitObject.h  MassConstraint.h  MomentumConstraint.h  NeutralParticleTrack.h  NeutrinoFitObject.h  NewFitterGSL.h  NewtonFitterGSL.h  OPALFitterGSL.h  ParameterScanner.h  ParticleConstraint.h  ParticleFitObject.h  RootTracer.h  SimplePhotonFitObject.h  SoftBWMassConstraint.h  SoftBWParticleConstraint.h  SoftGaussParticleConstraint.h  TopEventILC.h  TopEventILCSoft.h  TopTester.h  TrackConstraint.h  TrackFitObject.h  TrackParticleFitObject.h  TwoB4JPairing.h  TwoVector.h  VertexConstraint.h  (+3 more)
not_used/: ChargedParticleTrack.h  K0Event.h  NeutralParticleTrack.cc  TrackMomentumConstraint.cc  TrackMomentumConstraint.h  VertexFitObject.h
src/: BaseConstraint.cc  BaseDefs.cc  BaseFitObject.cc  BaseFitter.cc  BaseHardConstraint.cc  BaseTracer.cc  ChargedParticleTrack.cc  DijetEventILC.cc  FourJetPairing.cc  FourJetZHPairing.cc  FourVector.cc  ISRPhotonFitObject.cc  IterationScanner.cc  JBLHelix.cc  JetFitObject.cc  K0Event.cc  LeptonFitObject.cc  MassConstraint.cc  MomentumConstraint.cc  NeutralParticleTrack.cc  NeutrinoFitObject.cc  NewFitterGSL.cc  NewtonFitterGSL.cc  OPALFitterGSL.cc  ParameterScanner.cc  ParticleConstraint.cc  ParticleFitObject.cc  RootTracer.cc  SimplePhotonFitObject.cc  SoftBWMassConstraint.cc  SoftBWParticleConstraint.cc  SoftGaussMassConstraint.cc  SoftGaussMomentumConstraint.cc  SoftGaussParticleConstraint.cc  TextTracer.cc  TopEventILC.cc  TopEventILCSoft.cc  TopTester.cc  TrackFitObject.cc  TrackParticleFitObject.cc  (+5 more)
